--- a/app/user/activationlink.html
+++ b/app/user/activationlink.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Activation link for your Links account</title>
+    <title>Activation code for your account</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0,user-scalable=no">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
@@ -10,9 +10,11 @@
   </head>
   <body>
   
-  	<h1>Activation link</h1>
+  	<h1>Activation code</h1>
   
-  	<p><a href="{activationlink}">Activation link</a></p>
+  	<p>Please use the following activation code to activate your account:</p>
+  	
+  	<p>{activationcode}</p>
   
   </body>
 </html>
